[gd_scene load_steps=10 format=3 uid="uid://w1mf8ycl5vr8"]

[ext_resource type="Script" path="res://Scripts/room.gd" id="1_3ypi1"]

[sub_resource type="BoxMesh" id="BoxMesh_hfqq0"]
size = Vector3(0.5, 3.5, 12)

[sub_resource type="BoxMesh" id="BoxMesh_own0x"]
size = Vector3(0.5, 2.5, 5.25)

[sub_resource type="BoxMesh" id="BoxMesh_3sjjc"]
size = Vector3(0.5, 2.5, 5.25)

[sub_resource type="BoxMesh" id="BoxMesh_aitxe"]
size = Vector3(5, 0.5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_wxs0w"]
size = Vector3(5, 0.5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_8tif8"]
size = Vector3(0.5, 4, 5)

[sub_resource type="BoxMesh" id="BoxMesh_2lvwr"]
size = Vector3(4, 4, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_gtgfx"]
size = Vector3(0.5, 4, 5)

[node name="Room" type="StaticBody3D"]
collision_layer = 2
script = ExtResource("1_3ypi1")

[node name="Wall1Node" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.75, 2.5, 0)
visible = false
collision_layer = 2

[node name="Top" type="MeshInstance3D" parent="Wall1Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25, 0)
mesh = SubResource("BoxMesh_hfqq0")

[node name="Side1" type="MeshInstance3D" parent="Wall1Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, -3.375)
mesh = SubResource("BoxMesh_own0x")

[node name="Side2" type="MeshInstance3D" parent="Wall1Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 3.375)
mesh = SubResource("BoxMesh_3sjjc")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("BoxMesh_aitxe")

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.75, 0)
mesh = SubResource("BoxMesh_wxs0w")

[node name="Wall1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.25, 2.5, 0)
mesh = SubResource("BoxMesh_8tif8")

[node name="Wall2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -2.25)
mesh = SubResource("BoxMesh_2lvwr")

[node name="Wall3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.25, 2.5, 0)
mesh = SubResource("BoxMesh_gtgfx")

[node name="Wall4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 2.25)
mesh = SubResource("BoxMesh_2lvwr")
